--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   hive_flutter: ^1.1.0
   http: ^1.2.2
   html: ^0.15.4
+  custom_rating_bar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
