--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
   provider: ^6.1.2
-  intl: ^0.17.0
+  intl: ^0.18.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   http: ^1.2.2
