--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,3 +34,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Tenada
+      fonts:
+        - asset: assets/fonts/Tenada.ttf
