--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dev_dependencies:
   build_runner: ^2.1.2
   hive_generator: ^2.0.1
   flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -61,6 +60,7 @@ flutter:
     - assets/images/grass.png
     - assets/images/grassFlower.png
     - assets/images/life.png
+    - assets/images/placeHolder.png
   fonts:
     - family: Tenada
       fonts:
