--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/dirt.png
+    - assets/images/dirtGrass.png
     - assets/images/flower.png
     - assets/images/flowerGarden.png
     - assets/images/grass.png
