--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   auto_size_text: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
